# NexusLIMS-CDCS

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.core.txt  requirements.txt
.claude/planning/: CHANGES_FROM_MDCS_2.21.0.md  DATATABLES_BOOTSTRAP5_GUIDE.md  POTENTIAL_UPGRADE_CONFLICTS.md  UPGRADE_PLAN_v3.18.0.md
.dev-deployment/: Dockerfile  README.md  SETUP_COMPLETE.md  dev-commands.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh
.dev-deployment/caddy/: Caddyfile  generate-certs.sh
.dev-deployment/caddy/certs/: ca.srl  server.crt  server.key
.dev-deployment/cdcs/: detail_stylesheet.xsl  dev_settings.py  example_record.xml  list_stylesheet.xsl
.dev-deployment/mongo/: docker-compose.yml
.dev-deployment/scripts/: init_dev_environment.py  setup-test-data.sh  update-xslt.sh
config/settings/: custom_settings.py  dev_settings.py  prod_settings.py
deployment/: .env.dev  .env.example  .env.prod.example  .gitignore  Dockerfile  LOCAL-HTTPS-TESTING.md  LOCAL-TEST-DEPLOYMENT.md  PRODUCTION.md  README.md  admin-commands.ps1  admin-commands.sh  dev-commands.ps1  dev-commands.sh  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-entrypoint.dev.sh  docker-entrypoint.prod.sh
deployment/caddy/: Caddyfile  Caddyfile.dev  Caddyfile.prod  Dockerfile  docker-entrypoint.sh
deployment/caddy/certs/: ca.crt  ca.key
deployment/extra/: .env
deployment/handle/: .env.example
deployment/saml2/: .env  .env.allauth.example  .env.djangosaml2.example
deployment/scripts/: backup_cdcs.py  init_environment.py  init_nexus_schema.py  restore_cdcs.py  setup-test-data.sh  show_stats.py  update-schema.sh  update-xslt.sh
docs/: mdcs-dev-setup.md
locale/en/LC_MESSAGES/: django.po
mdcs/: core_settings.py  settings.py  urls.py
mdcs_home/: menus.py
nexuslims_overrides/: CUSTOMIZATION.md  MIGRATION_GUIDE.md  README.md  __init__.py  apps.py  context_processors.py  menus.py  settings.py  signals.py  urls.py  views.py  xml.py
nexuslims_overrides/migrations/: 0001_create_search_operators.py  __init__.py
nexuslims_overrides/templates/: theme.html
nexuslims_overrides/templates/theme/: menu.html
nexuslims_overrides/templatetags/: __init__.py  nexuslims_extras.py  nexuslims_templatetags.py  nexuslims_xsl_transform.py
static/css/: extra.css  main.css  menu.css
static/js/: main.js
xslt/: detail_stylesheet.xsl  list_stylesheet.xsl
(+59 files in other folders)
